<resources>
    <string name="app_name">Zepplin2</string>
    <string name="header">Discover</string>
    <string name="explore_paris">Explore Paris</string>
    <string name="paris">Paris</string>
    <string name="discover">Discover</string>
    <string name="map">Map</string>
    <string name="my_posts">My Posts</string>
    <string name="requests">Requests</string>
    <string name="mynetwork">My Network</string>
    <string name="search_text">Where would you like to connect?</string>
    <string name="name_placeholder"><b>DummyName</b></string>
    <string name="reviews">Reviews</string>
    <string name="no_placeholder">XXXX</string>
    <string name="time_placeholder">Xd Xh left</string>
    <string name="description">placeholder text</string>

    <string name="username">John</string>
    <string name="city">Paris</string>
    <string name="home">Home</string>
    <string name="cards">Cards/Subscription</string>
    <string name="support">Support</string>
    <string name="request">My Request</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>

    <string name="connectbtn">Connect</string>

    <string name="user_location">dummy location</string>
    <string name="show_map">Show on map</string>

    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>

    <string name="API_key">AIzaSyAICrmjA_ZSevgby_flq17x5XGdHRnBymc</string>

    <string name="header_post">Post</string>
<string name="header_maps">Map</string>
    <string name="header_network">Network</string>

</resources>
