<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#F8F9FA"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimaryDark"
            >

        </View>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paris"
            android:layout_alignParentBottom="true"
            />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sidemenu_text"
            android:text="@string/username"
            android:gravity="center"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            >

        <TextView
          android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/sidemenu_text"
            android:text="@string/city"
            />

            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/sidemenu_margin_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_icon"
                />


        </RelativeLayout>

        <View
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_width="match_parent"
            >

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:background="@android:color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/SideMenu"
                    android:layout_weight="0.8"
                    android:text="@string/home"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/home_icon"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/SideMenu"
                    android:layout_weight="0.8"
                    android:text="@string/cards"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/card_icon"
                    />


            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_height="0dp"
            android:layout_weight="0.025"
            android:layout_width="match_parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:background="@android:color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/SideMenu"
                    android:layout_weight="0.8"
                    android:text="@string/support"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/phone_icon"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/SideMenu"
                    android:layout_weight="0.8"
                    android:text="@string/request"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/profile_icon_3"
                    />


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_height="0dp"
            android:layout_weight="0.025"
            android:layout_width="match_parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:background="@android:color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/SideMenu"
                    android:layout_weight="0.8"
                    android:text="@string/share"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/profile_icon"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/SideMenu"
                    android:layout_weight="0.8"
                    android:text="@string/logout"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/profile_icon_2"
                    />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>