<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#d8d8d8"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sidemenu_margin_end"
        android:layout_marginStart="@dimen/sidemenu_margin_end">

        <LinearLayout
            android:id="@+id/ll_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/sidemenu_margin_end"
            android:background="@drawable/round_box"
            android:orientation="vertical"
            android:weightSum="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:elevation="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/paris" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/request_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/sidemenu_margin_end"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_weight="0.6"
                    android:gravity="end"
                    android:text="@string/username"
                    android:textSize="@dimen/request_textsize" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0.3"
                    android:src="@drawable/location_icon_small" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_request_username"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/username"
                        android:gravity="center"
                        android:textSize="@dimen/request_textsize" />

                    <TextView
                        android:id="@+id/request_location"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="India"
                        android:textSize="@dimen/request_textsize" />


                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:background="@drawable/button_shape"
                    android:text="@string/show_map"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="end"
                    android:src="@drawable/time_icon_small" />

                <TextView
                    android:id="@+id/request_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/time_placeholder"
                    android:textSize="@dimen/request_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity=""
                    android:src="@drawable/reviewa_icon_small" />

                <TextView
                    android:id="@+id/request_description"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/description"
                    android:textSize="@dimen/request_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal"

                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:layout_gravity="bottom">

                    <TextView
                        android:clickable="true"
                        android:id="@+id/tv_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_accept"
                        android:text="@string/btn_accept"

                        />

                    <TextView
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/sidemenu_margin_end"
                        android:layout_toEndOf="@id/tv_accept"
                        android:background="@drawable/button_reject"
                        android:text="@string/btn_reject" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </FrameLayout>


</LinearLayout>