<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8d8d8"
    >

<FrameLayout
    android:layout_marginTop="@dimen/sidemenu_margin_end"
    android:layout_marginStart="@dimen/sidemenu_margin_end"
    android:layout_marginEnd="@dimen/sidemenu_margin_end"
    android:layout_width="match_parent"
    android:background="@drawable/round_box"
    android:layout_height="match_parent">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/civ_usericon"
           android:layout_width="@dimen/image_size"
           android:layout_height="@dimen/image_size"
           android:layout_marginStart="@dimen/sidemenu_margin_start"
           android:layout_marginTop="@dimen/sidemenu_margin_end"
           android:layout_marginBottom="@dimen/sidemenu_margin_end"
           android:src="@drawable/paris"
           />
       
       <TextView
           android:id="@+id/tv_username"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toEndOf="@+id/civ_usericon"
           android:layout_marginStart="@dimen/sidemenu_margin_start"
           android:layout_marginTop="@dimen/sidemenu_margin_end"
           android:text="@string/name_placeholder"
           android:textSize="@dimen/sidemenu_text"
           android:textColor="@color/colorPrimaryDark"
           />

       <ImageView
           android:id="@+id/iv_locator"
           android:src="@drawable/icon_location"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/tv_username"
           android:layout_toEndOf="@+id/civ_usericon"
           android:layout_marginStart="@dimen/sidemenu_margin_start"
           android:layout_marginTop="@dimen/margin_start_end"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toEndOf="@id/iv_locator"
           android:layout_below="@id/tv_username"
           android:layout_marginTop="@dimen/margin_start_end"
           android:layout_marginStart="@dimen/margin_start_end"
           android:text="@string/paris"
            android:textColor="@android:color/darker_gray"
           />

       <RatingBar
           android:id="@+id/rb_rating"
           android:theme="@style/RatingBar"
           style="?android:attr/ratingBarStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/sidemenu_margin_end"
           android:layout_alignParentEnd="true"
           android:layout_marginEnd="@dimen/sidemenu_margin_end"
           android:isIndicator="false"
           android:numStars="5" />

       <TextView
           android:clickable="true"
           android:layout_width="@dimen/button_width"
           android:layout_height="wrap_content"
android:layout_below="@id/rb_rating"
           android:layout_marginTop="@dimen/sidemenu_margin_end"
           android:text="@string/connectbtn"
           android:textSize="@dimen/sidemenu_text"
           android:textAlignment="center"
           android:background="@drawable/button_shape"
           android:textColor="@android:color/white"
           android:layout_alignParentEnd="true"
           />


   </RelativeLayout>

</FrameLayout>


</LinearLayout>